<resources>
    <string name="app_name" translatable="false">CloudFile</string>
    <string name="docs">Documents</string>
    <string name="audio">Audio</string>
    <string name="upload">Upload</string>
    <string name="video">Video</string>
    <string name="images">Images</string>
    <string name="show_uploads">Show Uploads</string>
    <string name="name">Name</string>
    <string name="record">Record</string>
    <string name="sample_url">sample Url</string>
    <string name="choose_document">Document</string>
    <string name="edit">Edit</string>
    <string name="playing">Playing</string>
    <string name="delete_message">Are you sure you want to delete this entry?</string>
    <string name="item_deleted">Deleted item</string>
    <string name="no_file">no file selected</string>
    <string name="undefined"> file undefined</string>
    <string name="upload_success">Upload Successful</string>
    <string name="non_editable">This document is not editable</string>
    <string name="new_doc">New Document</string>

    <string name="request_permissions">For security reasons, SD and microphone are disabled, enable both.</string>

    <!--adapter menu -->
    <string name="select">Select Action</string>
    <string name="download">Download</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>

    <!-- Recording -->
    <string name="start">Start Recording</string>
    <string name="stop">Stop Recording</string>
    <string name="multimedia">Multimedia</string>
    <!-- -->
    <string name="video_recording">Video recording</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="save">Save</string>
    <string name="file_name">File Name</string>
    <string name="document_content">Document content</string>
    <string name="saving">Saving</string>

    <!-- Download Task -->
    <string name="file_success"> File downloaded successful</string>
    <string name="file_fail">Error at download file</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="no_account_register_here">No account? Register here.</string>

    <string name="already_logged">Already logged</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password is required</string>
    <string name="password_length">Password must be more than 6 characters</string>
    <string name="user_created">User created</string>
    <string name="full_name">Full name</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="textview" translatable="false">TextView</string>

    <string name="permission">Permission denied</string>
    <string name="hold_button">Hold button pressed for audio recording</string>

</resources>
