<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/help"
        android:title="@string/show_uploads"
        app:showAsAction="ifRoom|withText" >

        <menu>
            <item
                android:id="@+id/image_uploads"
                android:title="@string/imagenes"
                />
            <item
                android:id="@+id/video_uploads"
                android:title="@string/video"
                />
            <item
                android:id="@+id/audio_uploads"
                android:title="@string/audio"
                />

            <item
                android:id="@+id/Documents_uploads"
                android:title="@string/choose_document" />
        </menu>
    </item>


</menu>