<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp"
    tools:context=".DocumentsMain">
    <!-- Main -->
    <ImageButton
        android:id="@+id/button_choose_doc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/choose_document"
        android:src="@drawable/library_docs" />

    <EditText
        android:id="@+id/document_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/doc_name"
        android:background="@color/white"
        android:hint="@string/file_name"
        android:inputType="text"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/document_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/progress_bar"
        android:layout_below="@id/document_name"
        android:layout_marginTop="16dp"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/upload_doc"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/upload_doc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/upload" />

    <ImageButton
        android:id="@+id/edit_doc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@id/upload_doc"
        android:contentDescription="@string/edit"
        android:src="@drawable/mode_edit" />

    <ImageButton
        android:id="@+id/new_doc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@id/edit_doc"
        android:contentDescription="@string/new_doc"
        android:src="@drawable/note_add" />


    <!-- Edit Mode -->
    <TextView
        android:id="@+id/doc_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/document_name"
        android:layout_alignBottom="@id/document_name"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/white"
        android:visibility="invisible" />


    <EditText
        android:id="@+id/document_Edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_save"
        android:layout_below="@id/document_name"
        android:layout_marginTop="16dp"
        android:autofillHints="Doc Body"
        android:gravity="top"
        android:hint="@string/document_content"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:visibility="invisible"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/save"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/button_save"
        android:gravity="center_horizontal"
        android:text="@string/cancel"
        android:visibility="invisible" />


</RelativeLayout>