<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp"
    tools:context=".MultimediaMain">

    <ImageButton
        android:id="@+id/button_choose_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/audio"
        android:src="@drawable/library_music" />

    <ImageButton
        android:id="@+id/button_choose_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/button_choose_audio"
        android:contentDescription="@string/images"
        android:src="@drawable/photo_library" />

    <ImageButton
        android:id="@+id/button_choose_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/button_choose_image"
        android:contentDescription="@string/video"
        android:src="@drawable/video_library" />

    <EditText
        android:id="@+id/audio_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/button_choose_video"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/button_choose_video"
        android:background="@color/white"
        android:gravity="center"
        android:textSize="16sp"
        android:hint="@string/file_name"
        android:inputType="text"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/info_audio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/progress_bar"
        android:layout_below="@id/audio_file_name"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:visibility="invisible" />

    <VideoView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/progress_bar"
        android:layout_below="@id/audio_file_name"
        android:layout_marginTop="15dp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/progress_bar"
        android:layout_below="@id/audio_file_name"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/images"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/upload_audio"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp" />

    <ImageButton
        android:id="@+id/record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/record"
        android:src="@drawable/mic" />

    <ImageButton
        android:id="@+id/video_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/record"
        android:contentDescription="@string/video_recording"
        android:src="@drawable/videocam" />

    <ImageButton
        android:id="@+id/photo_shot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/video_record"
        android:contentDescription="@string/take_a_photo"
        android:src="@drawable/add_photo" />

    <Button
        android:id="@+id/upload_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/upload" />


</RelativeLayout>